Adding Trivial MPI code

--- a/src/Makefile
+++ b/src/Makefile
@@ -3,3 +3,9 @@ wavetoy_serial: wavetoy_serial.c
 
 clean:
 	-rm -f wavetoy_serial
+
+# NOTE: To compile the OpenMP version, use 
+# gcc -fopenmp wavetoy_openmp.c -o wavetoy_openmp
+# will add this in the makefile in future
+# To compile the MPI version, use
+# mpicc wavetoy_mpi_L0.c -o wavetoy_mpi
